<resources>
    <string name="app_name">口袋心电</string>
    <string name="x_zhou_x1">X轴\n*1</string>
    <string name="x_zhou_x2">X轴\n*2</string>
    <string name="y_zhou_x1">Y轴\n*1</string>
    <string name="y_zhou_x2">Y轴\n*2</string>
    <string name="lvbo_on">数字滤波器\n开</string>
    <string name="lvbo_off">数字滤波器\n关</string>
    <string name="go">GO</string>
    <string name="login">登陆</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="login_success">login success</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="repeat_password">确认密码</string>
    <string name="next">注册</string>
    <string name="register">注册</string>
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
</resources>
