<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg"
                android:focusableInTouchMode="true"
                android:focusable="true"
    >
    <android.support.v7.widget.CardView
        android:layout_width="600dp"
        android:layout_height="600dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881"
                    />
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                >
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/CustomTextAppearance"
                    android:layout_height="match_parent">
                    <EditText
                        android:textSize="20sp"
                        android:hint="@string/Username"
                        android:textColor="#2fa881"
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    app:hintTextAppearance="@style/CustomTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:textSize="20sp"
                        android:hint="@string/Password"
                        android:textColor="#2fa881"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.wang.avi.AVLoadingIndicatorView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    app:indicatorColor="#FF0033"
                    android:id="@+id/progress"
                    app:indicatorName="BallClipRotateIndicator"
                    android:layout_gravity="center_horizontal"
                    style="AVLoadingIndicatorView.Large"
                    />
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="登陆"
                    android:textColor="#d3d3d3"
                    >
                </Button>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:fabSize="normal"-->
        <!--android:src="@drawable/plus"-->
        <!--android:transitionName="loginFab"-->
        <!--android:layout_alignTop="@id/cv"-->
        <!--android:layout_marginTop="25dp"-->
        <!--android:layout_alignEnd="@id/cv"-->
        <!--android:layout_marginEnd="-20dp"-->
        <!--/>-->
    <ImageButton
        android:id="@+id/fab"
        android:background="@drawable/circle_bg"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="20dp"
        android:src="@drawable/plus"
        android:scaleType="centerCrop"
        android:elevation="8dp"/>
</RelativeLayout>
